--- a/PETS2026/hotcrp-site-configuration.json
+++ b/PETS2026/hotcrp-site-configuration.json
@@ -173,7 +173,7 @@
       "name": "\"Artifact Available\" badge requirements",
       "order": 3,
       "type": "radio",
-      "description": "Should the artifact be awarded the available badge?",
+      "description": "Should the artifact be awarded the available badge? See https:\/\/petsymposium.org\/artifacts.php#artifact-available",
       "required": true,
       "visibility": "au",
       "condition": "all",
@@ -214,7 +214,7 @@
       "name": "\"Artifact Functional\" badge requirements",
       "order": 5,
       "type": "radio",
-      "description": "Should the artifact be awarded the functional badge?",
+      "description": "Should the artifact be awarded the functional badge? See https:\/\/petsymposium.org\/artifacts.php#artifact-functional",
       "required": true,
       "visibility": "au",
       "condition": "all",
@@ -255,7 +255,7 @@
       "name": "\"Artifact Reproduced\" badge requirements",
       "order": 7,
       "type": "radio",
-      "description": "Should the artifact be awarded the reproduced badge?",
+      "description": "Should the artifact be awarded the reproduced badge? See https:\/\/petsymposium.org\/artifacts.php#artifact-reproduced",
       "required": true,
       "visibility": "au",
       "condition": "all",
@@ -596,7 +596,7 @@
   "submission_edit_message": "",
   "submission_freeze": false,
   "submission_grace": 960,
-  "submission_open": false,
+  "submission_open": true,
   "submission_registration": "2025-09-11 07:59:59 -0400",
   "submission_terms": "",
   "submitted_document_early_visibility": false,
